components/agility-pageModules/textWithForm/textWithForm.module.scss
@import "../../../styles/settings/mixins";
@import "../../../styles/settings/colors";

.bg-skyblue-light {
  background-color: $color-paleblue;
}
.textWithForm {
  .loader {
    button {
      min-width: 8rem;
    }
    label {
      visibility: hidden;
    }
  }
  .sideWrapper {
    padding: 1.875rem 2.375rem;
    border-radius: 1rem;
  }
  .rowLayoutHeading {
    display: none;
  }
  .columnLayoutHeading {
    order: 0;
  }
  &.columnAndRowLayoutAlign {
    text-align: center;
  }
  .columnLayoutHeading,
  .rowLayoutHeading {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      &:last-child {
        margin-bottom: 0.7rem;
      }
    }
  }
  .columnLayoutHeading {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      &:nth-child(2) {
        margin-top: toRem(10);
      }
    }
  }
  // default layout
  .content {
    display: flex;
    flex-direction: column;
    & > * {
      flex-basis: 100%;
    }
    .textContent {
      order: 3;
      padding: 0 1rem;
      .testimonials {
        margin-top: 2rem;
        .testimonial {
          .testimonialRating {
            display: flex;
            margin: 1.5rem 0 1rem 0;
            img {
              margin: 0 0.25rem;
            }
          }
          p {
            margin-top: 1rem;
            font-size: 1rem;
            white-space: pre-line;
          }
          small {
            font-size: 0.85rem;
          }
        }
      }

      .awardImages {
        margin-top: 1.5rem;
        .awardImage {
          padding: unset;
          margin: 0 0.25rem;
          max-width: 5.625rem;
          img {
            margin: unset;
          }
        }
      }
    }
    .form {
      order: 2;
      margin: 2rem 0;
      & > * {
        max-width: 26.25rem;
        margin: 0 auto;
        input:not([type="submit"]),
        select {
          background-color: $color-white;
          margin: 0;
          box-sizing: border-box;
          border: unset;
        }
      }
    }
    &.formRightCollapsed {
      form {
        display: grid;
        column-gap: 1rem;
        grid-template-columns: repeat(2, 1fr);
        & > div {
          width: 100%;
          &.full {
            grid-column: 1 / -1;
          }
          &.half {
            width: 100%;
          }
        }
      }
    }
    @include desktop() {
      flex-direction: row;
      &.formLeft {
        flex-direction: row-reverse;
      }
      &.formRightCollapsed {
        display: grid;
        gap: 2rem;
        grid-template-columns: 0.45fr 0.55fr;
        .form {
          width: 100%;
          .sideWrapper {
            max-width: unset;
            margin: unset;
          }
        }
      }
      .columnLayoutHeading {
        display: none;
      }
      .rowLayoutHeading {
        display: block;
      }
      .form {
        margin: 0;
      }
      .columnLayoutHeading,
      .textContent,
      .form {
        order: unset;
      }
    }
  }
  .buttons {
    display: flex;
    gap: 1em;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }
  // column layout
  .columnLayoutContent {
    display: flex;
    flex-direction: column;
    .bg-skyblue-light {
      background-color: transparent !important;
    }
    & > * {
      flex-basis: 100%;
    }
    form,
    .loader {
      display: grid;
      column-gap: 1rem;
      grid-template-columns: 1fr;
      div:last-of-type {
        grid-column: 1 / -1;
      }
      @include desktop() {
        grid-template-columns: 1fr 1fr;
      }
    }
    .textContent {
      padding: 0 1rem;
      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        margin-bottom: 1rem;
      }
      .testimonial {
        .testimonialRating {
          display: flex;
          margin: 1.5rem 0 1rem 0;
          img {
            margin: 0 0.25rem;
          }
        }
        p {
          font-size: 1rem;
          white-space: pre-line;
        }
        small {
          font-size: 0.85rem;
        }
      }
      .awardImages {
        margin-top: 1.5rem;
        .awardImage {
          padding: unset;
          margin: 0 0.25rem;
          max-width: 5.625rem;
          img {
            margin: unset;
          }
        }
      }
    }
    // !important is used here to override some form styles because this layout has unique styles for it.
    .form {
      margin-top: 0;
      & > * {
        margin: 0 auto;
        max-width: 100vw;
        width: 100%;
        & > div {
          max-width: unset !important;
          padding: 0 0.5rem !important;
          width: 100%;
          input,
          select {
            padding-top: 1rem;
            padding-bottom: 1rem;
            font-size: 1.25rem;
            border-radius: 0.5rem !important;
          }
          &:last-of-type {
            min-height: 6.25rem;
            position: unset !important;
            span {
              position: absolute;
              left: 50%;
              width: 100%;
              transform: translateX(-50%);
              button {
                background-color: $color-orange !important;
                border: unset;
                font-weight: 600 !important;
              }
            }
          }
        }
        input:not([type="submit"]),
        select {
          /*           background-color: $color-white !important; */
          box-sizing: border-box;
          border: 0.1rem solid $color-black;
        }
        label {
          margin: 0 0 0.25rem 0;
        }
        input[type="submit"] {
          font-size: toRem(24);
        }
      }
    }
  }
  @include desktop() {
    .content {
      padding-top: 3rem;
    }
  }
}

